trunk/src/Parser/ParserMiniJava.java
/* Generated By:JavaCC: Do not edit this line. ParserMiniJava.java */
package Parser;

import syntaxtree.*;

public class ParserMiniJava implements ParserMiniJavaConstants {

  static final public Program Start() throws ParseException {
   MainClass m1; ClassDeclList c1 = new ClassDeclList(); ClassDecl c;
    m1 = MainClass();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      if (jj_2_1(3)) {
        c = ClassDecl();
                                         c1.addElement(c);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CLASS:
          c = Class();
                    c1.addElement(c);
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    jj_consume_token(0);
            {if (true) return new Program(m1,c1);}
    throw new Error("Missing return statement in function");
  }

  static final public MainClass MainClass() throws ParseException {
  Identifier i1,i2; Statement s1;
    jj_consume_token(CLASS);
    i1 = Id();
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(STRING);
    jj_consume_token(LBRACKET);
    jj_consume_token(RBRACKET);
    i2 = Id();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    s1 = Statement();
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
    {if (true) return new MainClass(i1,i2,s1);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDeclSimple Class() throws ParseException {
  VarDeclList v1 = new VarDeclList();
  MethodDeclList m1 = new MethodDeclList();
  VarDecl v; MethodDecl m; Identifier i1;
    jj_consume_token(CLASS);
    i1 = Id();
    jj_consume_token(LBRACE);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
      case INT:
      case INT_VETOR:
      case BOOLEAN:
      case ID:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case INT_VETOR:
      case BOOLEAN:
      case ID:
        v = VarDecl();
                    v1.addElement(v);
        break;
      case PUBLIC:
        m = MethodDecl();
                       m1.addElement(m);
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(RBRACE);
    {if (true) return new ClassDeclSimple(i1,v1,m1);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl ClassDecl() throws ParseException {
  VarDeclList v1 = new VarDeclList();
  MethodDeclList m1 = new MethodDeclList();
  VarDecl v; MethodDecl m; Identifier i1,i2;
    jj_consume_token(CLASS);
    i1 = Id();
    jj_consume_token(EXTENDS);
    i2 = Id();
    jj_consume_token(LBRACE);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
      case INT:
      case INT_VETOR:
      case BOOLEAN:
      case ID:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case INT_VETOR:
      case BOOLEAN:
      case ID:
        v = VarDecl();
                    v1.addElement(v);
        break;
      case PUBLIC:
        m = MethodDecl();
                       m1.addElement(m);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(RBRACE);
    {if (true) return new ClassDeclExtends(i1,i2,v1,m1);}
    throw new Error("Missing return statement in function");
  }

  static final public VarDecl VarDecl() throws ParseException {
  Type t1; Identifier i1;
    t1 = Type();
    i1 = Id();
    jj_consume_token(PONTOVIRGULA);
    {if (true) return new VarDecl(t1,i1);}
    throw new Error("Missing return statement in function");
  }

  static final public Identifier Id() throws ParseException {
 Token t;
    t = jj_consume_token(ID);
             {if (true) return new Identifier(t.image);}
    throw new Error("Missing return statement in function");
  }

  static final public MethodDecl MethodDecl() throws ParseException {
  Type t1; Identifier i1; Exp e1;
  FormalList f1 = new FormalList();
  VarDeclList v1 = new VarDeclList() ; VarDecl v;
  StatementList s1 = new StatementList(); Statement s;
    jj_consume_token(PUBLIC);
    t1 = Type();
    i1 = Id();
    jj_consume_token(LPAREN);
    f1 = FormalList();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case INT_VETOR:
      case BOOLEAN:
      case IF:
      case WHILE:
      case PRINT_LINE:
      case LBRACE:
      case ID:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_4;
      }
      if (jj_2_2(2)) {
        v = VarDecl();
                                 v1.addElement(v);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case WHILE:
        case PRINT_LINE:
        case LBRACE:
        case ID:
          s = Statement();
                      s1.addElement(s);
          break;
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    jj_consume_token(RETURN);
    e1 = Exp();
    jj_consume_token(PONTOVIRGULA);
    jj_consume_token(RBRACE);
    {if (true) return new MethodDecl(t1,i1,f1,v1,s1,e1);}
    throw new Error("Missing return statement in function");
  }

  static final public FormalList FormalList() throws ParseException {
  FormalList f1 = new FormalList();
  Formal f2,f3; Identifier i1,i2; Type t1,t2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case INT_VETOR:
    case BOOLEAN:
    case ID:
      t1 = Type();
      i1 = Id();
    f2 = new Formal(t1,i1); f1.addElement(f2);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VIRGULA:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_5;
        }
        jj_consume_token(VIRGULA);
        t2 = Type();
        i2 = Id();
    f3 = new Formal(t2,i2); f1.addElement(f3);
      }
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
   {if (true) return f1;}
    throw new Error("Missing return statement in function");
  }

  static final public Type Type() throws ParseException {
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
      jj_consume_token(BOOLEAN);
              {if (true) return new BooleanType();}
      break;
    case ID:
      t = jj_consume_token(ID);
               {if (true) return new IdentifierType(t.image);}
      break;
    default:
      jj_la1[10] = jj_gen;
      if (jj_2_3(3)) {
        jj_consume_token(INT_VETOR);
                               {if (true) return new IntArrayType();}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
          jj_consume_token(INT);
             {if (true) return new IntegerType();}
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Statement Statement() throws ParseException {
  Statement s; StatementList s1 = new StatementList();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      jj_consume_token(LBRACE);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case WHILE:
        case PRINT_LINE:
        case LBRACE:
        case ID:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_6;
        }
        s = Statement();
                               s1.addElement(s);
      }
      jj_consume_token(RBRACE);
                                                                {if (true) return new Block(s1);}
      break;
    case ID:
      if (jj_2_4(2)) {
        s = ArrayAssignment();
                                         {if (true) return s;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          s = UnaryAssignment();
                                           {if (true) return s;}
          break;
        default:
          jj_la1[13] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
    case IF:
      s = If();
              {if (true) return s;}
      break;
    case WHILE:
      s = While();
                 {if (true) return s;}
      break;
    case PRINT_LINE:
      s = Print();
                 {if (true) return s;}
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Statement UnaryAssignment() throws ParseException {
  Identifier i1; Exp e1;
    i1 = Id();
    jj_consume_token(RECEBE);
    e1 = Exp();
    jj_consume_token(PONTOVIRGULA);
    {if (true) return new Assign(i1,e1);}
    throw new Error("Missing return statement in function");
  }

  static final public Statement ArrayAssignment() throws ParseException {
  Exp e1,e2; Identifier i1;
    i1 = Id();
    jj_consume_token(LBRACKET);
    e1 = Exp();
    jj_consume_token(RBRACKET);
    jj_consume_token(RECEBE);
    e2 = Exp();
    jj_consume_token(PONTOVIRGULA);
    {if (true) return new ArrayAssign(i1,e1,e2);}
    throw new Error("Missing return statement in function");
  }

  static final public Statement If() throws ParseException {
  Exp e1; Statement s1,s2;
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    e1 = Exp();
    jj_consume_token(RPAREN);
    s1 = Statement();
    jj_consume_token(ELSE);
    s2 = Statement();
    {if (true) return new If(e1,s1,s2);}
    throw new Error("Missing return statement in function");
  }

  static final public Statement Print() throws ParseException {
  Exp e1;
    jj_consume_token(PRINT_LINE);
    jj_consume_token(LPAREN);
    e1 = Exp();
    jj_consume_token(RPAREN);
    jj_consume_token(PONTOVIRGULA);
    {if (true) return new Print(e1);}
    throw new Error("Missing return statement in function");
  }

  static final public Statement While() throws ParseException {
  Exp e1; Statement s1;
    jj_consume_token(WHILE);
    jj_consume_token(LPAREN);
    e1 = Exp();
    jj_consume_token(RPAREN);
    s1 = Statement();
    {if (true) return new While(e1,s1);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp Exp() throws ParseException {
  Exp e;
    if (jj_2_5(2147483647)) {
      e = AndExp();
    } else if (jj_2_6(2147483647)) {
      e = LessThanExp();
    } else if (jj_2_7(2147483647)) {
      e = PlusExp();
    } else if (jj_2_8(2147483647)) {
      e = MinusExp();
    } else if (jj_2_9(2147483647)) {
      e = TimesExp();
    } else if (jj_2_10(2147483647)) {
      e = ArrayLookup();
    } else if (jj_2_11(2147483647)) {
      e = ArrayLength();
    } else if (jj_2_12(2147483647)) {
      e = CallExp();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NEGADO:
      case INTEGER_LITERAL:
      case TRUE:
      case FALSE:
      case NEW:
      case THIS:
      case LPAREN:
      case ID:
        e = PrimaryExp();
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp AndExp() throws ParseException {
  Exp e1,e2;
    e1 = PrimaryExp();
    jj_consume_token(E);
    e2 = PrimaryExp();
    {if (true) return new And(e1,e2);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp LessThanExp() throws ParseException {
  Exp e1,e2;
    e1 = PrimaryExp();
    jj_consume_token(MENOR);
    e2 = PrimaryExp();
    {if (true) return new LessThan(e1,e2);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp PlusExp() throws ParseException {
  Exp e1,e2;
    e1 = PrimaryExp();
    jj_consume_token(MAIS);
    e2 = PrimaryExp();
    {if (true) return new Plus(e1,e2);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp MinusExp() throws ParseException {
  Exp e1,e2;
    e1 = PrimaryExp();
    jj_consume_token(MENOS);
    e2 = PrimaryExp();
    {if (true) return new Minus(e1,e2);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp TimesExp() throws ParseException {
  Exp e1,e2;
    e1 = PrimaryExp();
    jj_consume_token(ESTRELA);
    e2 = PrimaryExp();
    {if (true) return new Times(e1,e2);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp ArrayLookup() throws ParseException {
  Exp e1,e2;
    e1 = PrimaryExp();
    jj_consume_token(LBRACKET);
    e2 = PrimaryExp();
    jj_consume_token(RBRACKET);
    {if (true) return new ArrayLookup(e1,e2);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp ArrayLength() throws ParseException {
  Exp e1;
    e1 = PrimaryExp();
    jj_consume_token(PONTO);
    jj_consume_token(LENGTH);
    {if (true) return new ArrayLength(e1);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp CallExp() throws ParseException {
  Exp e; Identifier i1; ExpList e1 = new ExpList();
    e = PrimaryExp();
    jj_consume_token(PONTO);
    i1 = Id();
    jj_consume_token(LPAREN);
    e1 = ExpList();
    jj_consume_token(RPAREN);
    {if (true) return new Call(e,i1,e1);}
    throw new Error("Missing return statement in function");
  }

  static final public ExpList ExpList() throws ParseException {
 ExpList e1 = new ExpList(); Exp e2,e3;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NEGADO:
    case INTEGER_LITERAL:
    case TRUE:
    case FALSE:
    case NEW:
    case THIS:
    case LPAREN:
    case ID:
      e2 = Exp();
                 e1.addElement(e2);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VIRGULA:
          ;
          break;
        default:
          jj_la1[16] = jj_gen;
          break label_7;
        }
        jj_consume_token(VIRGULA);
        e3 = Exp();
                          e1.addElement(e3);
      }
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
    {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp PrimaryExp() throws ParseException {
  Token t; Exp e;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      t = jj_consume_token(INTEGER_LITERAL);
                          {if (true) return new IntegerLiteral(Integer.parseInt(t.image));}
      break;
    case TRUE:
      jj_consume_token(TRUE);
               {if (true) return new True();}
      break;
    case FALSE:
      jj_consume_token(FALSE);
               {if (true) return new False();}
      break;
    case ID:
      t = jj_consume_token(ID);
               {if (true) return new IdentifierExp(t.image);}
      break;
    case THIS:
      jj_consume_token(THIS);
               {if (true) return new This();}
      break;
    default:
      jj_la1[18] = jj_gen;
      if (jj_2_13(3)) {
        e = ArrayAllocationExp();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NEW:
          e = AllocationExp();
          break;
        case NEGADO:
          e = NotExp();
          break;
        case LPAREN:
          e = ParenExp();
          break;
        default:
          jj_la1[19] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp ArrayAllocationExp() throws ParseException {
  Exp e;
    jj_consume_token(NEW);
    jj_consume_token(INT);
    jj_consume_token(LBRACKET);
    e = Exp();
    jj_consume_token(RBRACKET);
    {if (true) return new NewArray(e);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp AllocationExp() throws ParseException {
  Identifier i1;
    jj_consume_token(NEW);
    i1 = Id();
    jj_consume_token(LPAREN);
    jj_consume_token(RPAREN);
    {if (true) return new NewObject(i1);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp NotExp() throws ParseException {
  Exp e1;
    jj_consume_token(NEGADO);
    e1 = Exp();
                        {if (true) return new Not(e1);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp ParenExp() throws ParseException {
  Exp e1;
    jj_consume_token(LPAREN);
    e1 = Exp();
    jj_consume_token(RPAREN);
                               {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_3_13() {
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3R_19() {
    if (jj_scan_token(THIS)) return true;
    return false;
  }

  static private boolean jj_3R_18() {
    if (jj_scan_token(ID)) return true;
    return false;
  }

  static private boolean jj_3R_17() {
    if (jj_scan_token(FALSE)) return true;
    return false;
  }

  static private boolean jj_3R_16() {
    if (jj_scan_token(TRUE)) return true;
    return false;
  }

  static private boolean jj_3R_15() {
    if (jj_scan_token(INTEGER_LITERAL)) return true;
    return false;
  }

  static private boolean jj_3R_10() {
    if (jj_3R_12()) return true;
    if (jj_scan_token(LBRACKET)) return true;
    return false;
  }

  static private boolean jj_3R_11() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_15()) {
    jj_scanpos = xsp;
    if (jj_3R_16()) {
    jj_scanpos = xsp;
    if (jj_3R_17()) {
    jj_scanpos = xsp;
    if (jj_3R_18()) {
    jj_scanpos = xsp;
    if (jj_3R_19()) {
    jj_scanpos = xsp;
    if (jj_3_13()) {
    jj_scanpos = xsp;
    if (jj_3R_20()) {
    jj_scanpos = xsp;
    if (jj_3R_21()) {
    jj_scanpos = xsp;
    if (jj_3R_22()) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_49() {
    if (jj_scan_token(VIRGULA)) return true;
    if (jj_3R_29()) return true;
    return false;
  }

  static private boolean jj_3R_48() {
    if (jj_3R_29()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_49()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_47() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_48()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3R_46() {
    if (jj_3R_11()) return true;
    if (jj_scan_token(PONTO)) return true;
    if (jj_3R_12()) return true;
    if (jj_scan_token(LPAREN)) return true;
    if (jj_3R_47()) return true;
    if (jj_scan_token(RPAREN)) return true;
    return false;
  }

  static private boolean jj_3_4() {
    if (jj_3R_10()) return true;
    return false;
  }
